# bluecat

./: .coverage  README.md  example.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
bluecat/: bluecat.py
bluecat.egg-info/: PKG-INFO
bluecat/bluecat.egg-info/: PKG-INFO  requires.txt
data/: data.csv  emp.csv  kmom.csv
tests/: bluecat_test.py
