[metadata]
name = bluecat
description = Python implementation of Bluecat - uncertainty estimation for simulations and predictions
author = David Hah
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    bluecat
install_requires =
    scipy>=1.8.0
    numpy>=1.22
    matplotlib>=3.5
python_requires = >=3.7
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
bluecat = py.typed

[flake8]
max-line-length = 160